--- a/Resources/en.lproj/YPImagePickerLocalizable.strings
+++ b/Resources/en.lproj/YPImagePickerLocalizable.strings
@@ -21,3 +21,4 @@
 "YPImagePickerVideoTooShort" = "The video must be at least %@ seconds";
 "YPImagePickerWarningItemsLimit" = "The limit is %d photos or videos";
 "YPImagePickerUse" = "Use";
+"YPImagePickerAdd" = "Add";
